# navigation2_ws

./: .gitignore  contact_interface  frames_2026-01-15_12.16.24.gv  norm_lifecycle.sh
logs/DQN_nav2_model_tensorboard/DQN_1/: events.out.tfevents.1767982295.user304.1207215.0
results/20260105/dqn/: mem
results/dqn/: mem
results/unknown_obs/: mem
ros2_graph/: config.yaml  filtered_env.md
scripts/: analyze.ipynb  convert_pgm_to_world.py  create_map_yaml.py  future_extractor.py  interactive_pgm_editor.py  pettingZoo_test.py  rec_partition.py  sb3_compatible_wrapper.py
sdf_dumps/: robot_1.sdf  robot_10.sdf  robot_11.sdf  robot_12.sdf  robot_13.sdf  robot_14.sdf  robot_15.sdf  robot_16.sdf  robot_17.sdf  robot_18.sdf  robot_19.sdf  robot_2.sdf  robot_20.sdf  robot_3.sdf  robot_4.sdf  robot_5.sdf  robot_6.sdf  robot_7.sdf  robot_8.sdf  robot_9.sdf
src/nav2_pure_pursuit_controller/: CMakeLists.txt  package.xml  pure_pursuit_controller_plugin.xml
src/nav2_pure_pursuit_controller/include/nav2_pure_pursuit_controller/: pure_pursuit_controller.hpp
src/nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
src/nav2_rl_controller/: CMakeLists.txt  package.xml  rl_controller_plugin.xml
src/nav2_rl_controller/include/nav2_rl_controller/: rl_controller.hpp
src/nav2_rl_controller/src/: rl_controller.cpp
src/parallel_controller_env/: package.xml  setup.cfg  setup.py
src/rl_launcher/: package.xml  setup.cfg  setup.py
src/tb4_launcher/: package.xml  setup.cfg  setup.py
src/world_xacro_creator/: mem.txt  package.xml  setup.cfg  setup.py
urdf_dumps/: robot_1.urdf  robot_10.urdf  robot_11.urdf  robot_12.urdf  robot_13.urdf  robot_14.urdf  robot_15.urdf  robot_16.urdf  robot_17.urdf  robot_18.urdf  robot_19.urdf  robot_2.urdf  robot_20.urdf  robot_3.urdf  robot_4.urdf  robot_5.urdf  robot_6.urdf  robot_7.urdf  robot_8.urdf  robot_9.urdf
(+73 files in other folders)
